Create a HTML skeleton

--- a/index.html
+++ b/index.html
@@ -10,10 +10,28 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header>
-  </header>
-  <main>
-  </main>
+  <div class="container">
+    <div class="row">
+      <div class="column-full">
+
+        <header>
+          <p>KittyCat</p>
+        </header>
+
+        <main>
+          <div class="row">
+            <div class="column-halves">
+              <p>Do you know your cats?</p>
+            </div>
+            <div class="column-halves">
+              <button>Give me a cat!</button>
+            </div>
+          </div>
+        </main>
+
+      </div>
+    </div>
+  </div>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
