--- a/index.html
+++ b/index.html
@@ -11,26 +11,23 @@
 </head>
 <body>
   <div class="container">
-    <div class="row">
-      <div class="column-full">
-
-        <header>
-          <p>KittyCat</p>
-        </header>
-
-        <main>
-          <div class="row">
-            <div class="column-halves">
-              <p>Do you know your cats?</p>
-            </div>
-            <div class="column-halves">
-              <button>Give me a cat!</button>
-            </div>
-          </div>
-        </main>
-
+    <header>
+      <div class="row">
+        <div class="column-full"></div>
       </div>
-    </div>
+      <p>KittyCat</p>
+    </header>
+
+    <main>
+      <div class="row center">
+        <div class="column-halves">
+          <p>Do you know your cats?</p>
+        </div>
+        <div class="column-halves">
+          <button>Give me a cat!</button>
+        </div>
+      </div>
+    </main>
   </div>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
