Updated title of app to PurrBreeds

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="column-full"></div>
       </div>
-      <p>KittyCat</p>
+      <p>PurrBreeds</p>
     </header>
 
     <main>
@@ -29,7 +29,6 @@
       </div>
     </main>
   </div>
-  <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
