--- a/index.html
+++ b/index.html
@@ -18,13 +18,30 @@
       <p>PurrBreeds</p>
     </header>
 
-    <main>
-      <div class="row center">
-        <div class="column-halves">
-          <p>Do you know your cats?</p>
+    <main class="container">
+      <div data-view="start-view" class="hidden">
+        <div class="row center">
+          <div class="column-halves">
+            <p>Do you know your cats?</p>
+          </div>
+          <div class="column-halves">
+            <button>Give me a cat!</button>
+          </div>
         </div>
-        <div class="column-halves">
-          <button>Give me a cat!</button>
+      </div>
+
+      <div data-view="guess-view">
+        <div class="row center">
+          <div class="colm-full">
+            <img src="">
+          </div>
+        </div>
+        <div class="row center">
+          <div class="colm-full">
+            <label><input/>1</label>
+            <label><input />2</label>
+            <label><input />3</label>
+          </div>
         </div>
       </div>
     </main>
