Created guess-view where banner, image, and survey are situated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main class="container">
       <div data-view="start-view" class="hidden">
-        <div class="row center">
+        <div class="row">
           <div class="column-halves">
             <p>Do you know your cats?</p>
           </div>
@@ -31,16 +31,19 @@
       </div>
 
       <div data-view="guess-view">
-        <div class="row center">
-          <div class="colm-full">
-            <img src="">
+        <div class="banner column-full">
+          <h2>Scottish Fold</h2>
+        </div>
+        <div class="row cat-container">
+          <div class="column-full cat-holder">
+            <img src="./images/placeholder-image-square.jpg.jpg">
           </div>
         </div>
-        <div class="row center">
-          <div class="colm-full">
-            <label><input/>1</label>
-            <label><input />2</label>
-            <label><input />3</label>
+        <div class="row">
+          <div class="column-full quiz">
+            <label><input type="button" value="a"/></label>
+            <label><input type="button" value="b"/></label>
+            <label><input type="button" value="c"/></label>
           </div>
         </div>
       </div>
