With api key and XMLHttpRequest, app has access to get a queue of 10 cats. Next. render breed and image onto display

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main class="container">
 
-      <div data-view="start-view" class="hidden">
+      <div data-view="start-view" class="">
         <div class="row">
           <div class="column-halves">
             <p>Do you know your cats?</p>
@@ -31,7 +31,7 @@
         </div>
       </div>
 
-      <div data-view="guess-view" class="">
+      <div data-view="guess-view" class="hidden">
         <div class="row">
           <div class="banner column-full">
             <h2>Scottish Fold</h2>
@@ -39,7 +39,7 @@
         </div>
         <div class="row cat-quiz">
           <div class="column-half cat-img">
-            <img src="./images/placeholder-image-square.jpg.jpg">
+            <img src="./images/placeholder-image-square.jpg.jpg" alt="cat image">
           </div>
           <div class="column-half choices">
             <label><input type="button" value="a"/></label>
@@ -51,5 +51,6 @@
     </main>
   </div>
   <script src="js/main.js"></script>
+  <script src="js/data.js"></script>
 </body>
 </html>
