Completed issue 2, user can start the quiz and see image and multiple choices which gives back feedback if the choice is right or wrong

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div data-view="guess-view" class="hidden">
         <div class="row">
           <div class="banner column-full">
-            <h2>Scottish Fold</h2>
+            <h2></h2>
           </div>
         </div>
         <div class="row cat-quiz">
@@ -42,9 +42,9 @@
             <img src="./images/placeholder-image-square.jpg.jpg" alt="cat image">
           </div>
           <div class="column-half choices">
-            <label><input type="button" value="a"/></label>
-            <label><input type="button" value="b"/></label>
-            <label><input type="button" value="c"/></label>
+            <label><input type="button" value="a" class=""/></label>
+            <label><input type="button" value="b" class=""/></label>
+            <label><input type="button" value="c" class=""/></label>
           </div>
         </div>
       </div>
