--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AJAX Project</title>
   <link rel="icon" href="images/favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -45,6 +48,11 @@
             <label><input type="button" value="a" class=""/></label>
             <label><input type="button" value="b" class=""/></label>
             <label><input type="button" value="c" class=""/></label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="column-full next-icon">
+            <i class="fa-solid fa-chevron-right fa-xl hidden"></i>
           </div>
         </div>
       </div>
