--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="row">
           <div class="column-full next-icon">
             <i class="fa-solid fa-chevron-right fa-xl hidden"></i>
+            <button class="restart hidden">Restart</button>
           </div>
         </div>
       </div>
